# trading-platform

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  1.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  my.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  technical_spec.md  tickers_all.txt  tickers_my.txt  ЭТАП_04_SUMMARY.md
configs/features/: default.yaml  full.yaml  minimal.yaml
configs/hyperopt/: automl_config.yaml  catboost_search_space.yaml  lightgbm_search_space.yaml  multi_level_example.yaml  random_forest_search_space.yaml  tabnet_search_space.yaml  threshold_optimization_example.yaml  xgboost_search_space.yaml
configs/labeling/: README.md  horizon_adaptive.yaml  horizon_fixed.yaml  long_only.yaml  long_short.yaml  regression_mfe_mae.yaml  regression_returns.yaml  triple_barrier_atr.yaml
configs/models/: catboost_default.yaml  cnn_lstm_default.yaml  elasticnet_default.yaml  extra_trees_default.yaml  ft_transformer_default.yaml  gru_default.yaml  gru_regression.yaml  lightgbm_default.yaml  logistic_regression_default.yaml  lstm_bidirectional.yaml  lstm_deep.yaml  lstm_default.yaml  node_default.yaml  random_forest_default.yaml  seq2seq_default.yaml  tabnet_default.yaml  tcn_default.yaml  tft_default.yaml  xgboost_default.yaml
configs/pipelines/: backtest_only.yaml  feature_pipeline.yaml  full_pipeline_example.yaml  training_only.yaml
docs/: Docker_Guide.md  README_INDICATORS.md
docs/artifacts/: Backtests_and_Simulations.md  Configurations.md  Datasets_and_Feature_Store.md  Documentation_and_Guides.md  Metrics_and_Logs.md  Models_and_Weights.md  Monitoring_and_Alerts.md  Reports_and_Visualizations.md  Scripts_and_Environment.md
docs/evaluation/: QUICK_START.md  README.md
docs/exits/: Reverse_Signal_Exit.md  Risk_Limit_Exit.md  Scale_Out.md  Stop_Loss.md  Take_Profit.md  Time_Stop.md  Trailing_Stop.md
docs/features/: Calendar_Time_Features.md  Higher_Timeframe_Indicators.md  Price_Features.md  README_FEATURES.md  Technical_Indicators_Current_TF.md  Ticker_Features.md  Volume_Orderflow_Features.md
docs/indicators/: !Price_with_Indicator_View.md  ADX_Average_Directional_Index.md  ATR_Average_True_Range.md  Accumulation_Distribution.md  Bollinger_Bands.md  CCI_Commodity_Channel_Index.md  Chaikin_Money_Flow.md  Detrended_Price_Oscillator.md  Donchian_Channels.md  EMA_Exponential_Moving_Average.md  Elder_Force_Index.md  Fractal_Dimension_Index.md  Heikin_Ashi.md  Horizontal_Volume.md  Ichimoku_Cloud.md  Keltner_Channels.md  MACD_Moving_Average_Convergence_Divergence.md  Money_Flow_Index.md  Nadaraya_Watson_Envelope.md  OBV_On_Balance_Volume.md  Parabolic_SAR.md  Pivot_Points.md  RSI_Relative_Strength_Index.md  SMA_Simple_Moving_Average.md  Stochastic_Oscillator.md  Stochastic_RSI.md  TRIX_Triple_Exponential_Average.md  VWAP_Volume_Weighted_Average_Price.md  Volume_Metrics.md  Volume_Profile.md  WMA_Weighted_Moving_Average.md  Williams_R.md
docs/labeling/: Adaptive_Rules.md  Class_Balancing.md  Direction_Mode_Config.md  Horizon_Config.md  Metadata.md  Post_Filters.md  Target_Types.md  Triple_Barrier_Config.md
docs/models/: CNN_LSTM.md  CatBoost.md  ElasticNet.md  ExtraTrees.md  FT_Transformer.md  GRU.md  Informer.md  LSTM.md  LightGBM.md  Logistic_Regression.md  NODE.md  RandomForest.md  Seq2Seq_Attention.md  TabNet.md  XGBoost.md  (+2 more)
examples/: indicators_demo.py  sequential_models_demo.py
plan/: QUICK_START.md  README.md  SUMMARY.md  ЭТАП_05_SUMMARY.md  Этап_00_Инициализация_проекта.md  Этап_00_Отчет_.md  Этап_01_Модуль_данных.md  Этап_02_Обработка_и_валидация_данных.md  Этап_03_Библиотека_индикаторов.md  Этап_03_ВЫПОЛНЕН.md  Этап_04_ВЫПОЛНЕН.md  Этап_04_Генерация_признаков.md  Этап_05_ВЫПОЛНЕН.md  Этап_05_КРИТЕРИИ_ВЫПОЛНЕНЫ.md  Этап_05_Разметка_таргетов.md  Этап_06_Базовая_инфраструктура_моделирования.md  Этап_07_ВЫПОЛНЕН.md  Этап_07_Классические_ML_модели.md  Этап_08_ВЫПОЛНЕН.md  Этап_08_Нейросетевые_модели.md  Этап_09_ВЫПОЛНЕН.md  Этап_09_Система_обучения.md  Этап_10_ВЫПОЛНЕН.md  Этап_10_Оценка_моделей.md  Этап_11_ВЫПОЛНЕН.md  Этап_11_Движок_бэктестинга.md  Этап_12_ВЫПОЛНЕН.md  Этап_12_Система_пайплайнов.md  Этап_13_Оркестрация.md  Этап_14_CLI_интерфейс.md  Этап_15_GUI_интерфейс.md  Этап_16_Интеграция_Tinkoff_API.md  Этап_17_Мониторинг_и_логирование.md  Этап_18_Распределённые_вычисления.md  Этап_19_CI_CD_и_тестирование.md  Этап_20_Документация_и_финализация.md
requirements/: base.txt  conda-cpu.yml  conda-gpu.yml  cpu.txt  cuda.txt  gpu.txt
src/: __init__.py
tests/: __init__.py  conftest.py
(+408 files in other folders)
